--- a/exercicios/ex025_projeto_cordel/style.css
+++ b/exercicios/ex025_projeto_cordel/style.css
@@ -1,79 +1,29 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Butterfly+Kids&family=DotGothic16&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Passion+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-
-
-@import url('https://fonts.googleapis.com/css2?family=Butterfly+Kids&family=DotGothic16&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Passion+One&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sriracha&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-
-
-:root{
-    --fonte1: Verdana, Geneva, sans-serif;
-    --fonte2: 'Passion One', cursive;
-    --fonte3: "Sriracha", cursive;
-
-}
-
 
 *{
-    margin: 0px;
     padding: 0px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-
-html, body{
-    background-color: darkgray;
-    min-height: 100vh;
-    font-family: var(--fonte1);
+    margin: 0px;
 }
 
 header{
-    
+    padding: 60px;
+    font-size: 40px;
     background-color: black;
     color: white;
     text-align: center;
+    margin-bottom: ;
 }
-pre{
-    padding-top: 50px ;
-    padding-bottom: 50px;
-}
-pre > h1{
-    font-family: var(--fonte2);
-    font-size: 4em;
-    font-variant: small-caps;
-}
-a{
-    text-align: center;
+header a{
     color: white;
     text-decoration: none;
-    font-weight: bolder;
 }
-header a:hover, footer a:hover{
+header a:hover{
     text-decoration: underline;
 }
-section, section > p{
-    font-family: var(--fonte3);
-    padding-top: 10vh;
-    padding-bottom: 10vh;
-    padding-left: 30px;
-    line-height: 2em;
+header h1{
+    margin-bottom: -80px;
 }
-section.imagem > p{
-    background-color: rgba(0, 0, 0, 0.705);
-    width: 400px;
-}
-section.normal{
-    background-color: white;
-    color: black;
-}
-section.imagem{
-    background-color: rgb(121, 15, 121);
-    color: wheat;
-}
-footer{
-    background-color: black;
-    color: white;
-    text-decoration: none;
-    text-align: center;
-    padding: 10px;
+header p{
+    font-size: 15px;
 }
